k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: train-deploy
  labels:
    app: train
spec:
  replicas: 1
  selector:                     
    matchLabels:
      app: train
  template:
    metadata:
      labels:
        app: train
    spec:
      containers:
        - name: train
          image: dockuday/train:latest
          ports:
            - containerPort: 8080
