k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: train-service
  labels:
    app: train
spec:
  selector:
    app: train
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP  # Specify service type
