k8s/manifests/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: 
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: udaytrainbooking.local
#     http:
#       paths:
#       - path: /app
#         pathType: Prefix
#         backend:
#           service:
#             name: train-service
#             port:
#               number: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: train-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: udaytrainbooking.local
    http:
      paths:
      - path: /app   #(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: train-service
            port:
              number: 8080

      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: train-service
            port:
              number: 8080
